add container to site

--- a/site/index.jade
+++ b/site/index.jade
@@ -7,7 +7,7 @@ html
     link(href='https://tastyplug.tastycat.org/style/normalize.css', rel='stylesheet', type='text/css')
     link(href='https://tastyplug.tastycat.org/style/skeleton.css', rel='stylesheet', type='text/css')
   body
-    div
+    div.container
       h1 TastyPlug - The plug.dj extension.
       h3 Drag the "TastyPlug" button to your bookmarks or right click it to save as a bookmark.
       span
