--- a/site/index.jade
+++ b/site/index.jade
@@ -4,8 +4,8 @@ html
         meta(charset='UTF-8')
         meta(name='viewport', content='width=device-width,initial-scale=1')
         title TastyPlug
-        link(href='https://tastyplug.tastycat.org/style/normalize.css', rel='stylesheet', type='text/css')
-        link(href='https://tastyplug.tastycat.org/style/skeleton.css', rel='stylesheet', type='text/css')
+        link(href='https://tastyplug.tastycat.org/style/normalize.min.css', rel='stylesheet', type='text/css')
+        link(href='https://tastyplug.tastycat.org/style/skeleton.min.css', rel='stylesheet', type='text/css')
         link(href='https://tastyplug.tastycat.org/style/hint.min.css', rel='stylesheet', type='text/css')
         style.
             body {
