firefox addon is here
is it worth it? 🤔

--- a/site/index.jade
+++ b/site/index.jade
@@ -39,7 +39,8 @@ html
                         a(href="https://tastyplug.tastycat.org/tastyplug.user.js")
                             button(data-hint="for Greasemonkey and Tampermonkey").hint--bottom.hint--info.hint--rounded UserScript
                     div.three.columns
-                            button(data-hint="Soon").hint--bottom.hint--error.hint--rounded Firefox
+                        a(href="https://addons.mozilla.org/en-US/firefox/addon/tastyplug",target="_blank")
+                            button(data-hint="It may take up from 3 to 5 days to receive updates!").hint--bottom.hint--warning.hint--rounded Chrome
                     div.three.columns
                         a(href="https://chrome.google.com/webstore/detail/tastyplug/faccgibalfdoihmenknhpfhldkmgaang",target="_blank")
                             button(data-hint="It may take up to 12 hours to receive updates!").hint--bottom.hint--warning.hint--rounded Chrome
