--- a/site/index.jade
+++ b/site/index.jade
@@ -40,7 +40,7 @@ html
                             button(data-hint="for Greasemonkey and Tampermonkey").hint--bottom.hint--info.hint--rounded UserScript
                     div.three.columns
                         a(href="https://addons.mozilla.org/en-US/firefox/addon/tastyplug",target="_blank")
-                            button(data-hint="It may take up from 3 to 5 days to receive updates!").hint--bottom.hint--warning.hint--rounded Chrome
+                            button(data-hint="It may take up from 3 to 5 days to receive updates!").hint--bottom.hint--warning.hint--rounded Firefox
                     div.three.columns
                         a(href="https://chrome.google.com/webstore/detail/tastyplug/faccgibalfdoihmenknhpfhldkmgaang",target="_blank")
                             button(data-hint="It may take up to 12 hours to receive updates!").hint--bottom.hint--warning.hint--rounded Chrome
