a lot of changes, unsurprisingly removing code and getting more features

--- a/assets/styles/tastyplug.css
+++ b/assets/styles/tastyplug.css
@@ -101,7 +101,7 @@
 	-webkit-mask-position: -175px -245px;
 }
 .cm.tp .tp-icon-default {
-	background: url("https://tastyplug.tastycat.org/images/tplug.png");
+	background: url("https://i.imgur.com/Htz7txq.png");
 	width: 25px;
 	height: 25px;
 	position: absolute;
@@ -132,7 +132,7 @@
 }
 
 .tp-logo {
-	background: url("https://tastyplug.tastycat.org/images/tplug.png");
+	background: url("https://i.imgur.com/Htz7txq.png");
 	width: 25px;
 	height: 25px;
 	position: absolute;
