--- a/site/styles/hint.css
+++ b/site/styles/hint.css
@@ -1,6 +1,8 @@
-/*! Hint.css - v2.3.0 - 2016-05-21
-* http://kushagragour.in/lab/hint/
-* Copyright (c) 2016 Kushagra Gour; Licensed  */
+/*!
+ * Hint.css - v2.3.0 - 2016-05-21
+ * http://kushagragour.in/lab/hint/
+ * Copyright (c) 2016 Kushagra Gour; Licensed
+ */
 
 /*-------------------------------------*	HINT.css - A CSS tooltip library
 \*-------------------------------------*/
