--- a/site/styles/normalize.css
+++ b/site/styles/normalize.css
@@ -1,4 +1,6 @@
-/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+/*!
+ * normalize.css v3.0.2 | MIT License | git.io/normalize
+*/
 
 /**
  * 1. Set default font family to sans-serif.
