--- a/assets/styles/legacy_chat.scss
+++ b/assets/styles/legacy_chat.scss
@@ -87,6 +87,12 @@ $smallest_message_height: 28px;
         margin-left: -4px;
         @extend %smaller;
       }
+
+      i.icon-arrow-up, i.icon-arrow-down {
+        margin-left: -10px;
+        margin-top: -10px;
+        @extend %smaller;
+      }
     }
   }
 
