--- a/site/index.jade
+++ b/site/index.jade
@@ -62,13 +62,13 @@ html
                 p Hover over a button to see more information.
 
                 div.row
-                    div.one-third.columns
+                    div.one-third.column
                         a(href="https://tastyplug.tastycat.org/tastyplug.user.js")
                             button(data-hint="Recommended. Use any UserScript Extension.").hint--bottom.hint--info.hint--rounded UserScript
-                    div.one-third.columns
+                    div.one-third.column
                         a(href="javascript:(function(){$.getScript('https://tastyplug.tastycat.org/tastyplug.min.js');}());")
                             button(data-hint="Manual Bookmark").hint--bottom.hint--success.hint--rounded TastyPlug
-                    div.one-third.columns
+                    div.one-third.column
                         a(href="https://chrome.google.com/webstore/detail/tastyplug/faccgibalfdoihmenknhpfhldkmgaang",target="_blank")
                             button(data-hint="It may take up to 12 hours to receive updates!").hint--bottom.hint--warning.hint--rounded Chrome
             hr
