--- a/site/index.jade
+++ b/site/index.jade
@@ -4,9 +4,9 @@ html
         meta(charset='UTF-8')
         meta(name='viewport', content='width=device-width,initial-scale=1')
         title TastyPlug
-        link(href='https://tastyplug.tastycat.org/style/normalize.min.css', rel='stylesheet', type='text/css')
-        link(href='https://tastyplug.tastycat.org/style/skeleton.min.css', rel='stylesheet', type='text/css')
-        link(href='https://tastyplug.tastycat.org/style/hint.min.css', rel='stylesheet', type='text/css')
+        link(href='https://catsaretasty.github.com/tastyplug/style/normalize.min.css', rel='stylesheet', type='text/css')
+        link(href='https://catsaretasty.github.com/tastyplug/style/skeleton.min.css', rel='stylesheet', type='text/css')
+        link(href='https://catsaretasty.github.com/tastyplug/style/hint.min.css', rel='stylesheet', type='text/css')
         script(type='text/javascript').
             var warned = false;
             var $ = {
@@ -63,10 +63,10 @@ html
 
                 div.row
                     div.one-third.column
-                        a(href="https://tastyplug.tastycat.org/tastyplug.user.js")
+                        a(href="https://catsaretasty.github.com/tastyplug/tastyplug.user.js")
                             button(data-hint="Recommended. Use any UserScript Extension.").hint--bottom.hint--info.hint--rounded UserScript
                     div.one-third.column
-                        a(href="javascript:(function(){$.getScript('https://tastyplug.tastycat.org/tastyplug.min.js');}());")
+                        a(href="javascript:(function(){$.getScript('https://catsaretasty.github.com/tastyplug/tastyplug.min.js');}());")
                             button(data-hint="Manual Bookmark").hint--bottom.hint--success.hint--rounded TastyPlug
                     div.one-third.column
                         a(href="https://chrome.google.com/webstore/detail/tastyplug/faccgibalfdoihmenknhpfhldkmgaang",target="_blank")
